--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -186,9 +186,7 @@ https://guanyu.longfor.com/app-server/api/v1/main/start url reject
 ^https?:\/\/dili\.bdatu\.com\/jiekou\/ad url reject
 ^https?:\/\/wap\.ngchina\.cn\/news\/adverts url reject
 # > gaodeditu
-^https?:\/\/optimus-ads\.amap\.com\/uploadimg\/\w+\.gif url reject-img
-^https?:\/\/m5\.amap\.com\/ws\/shield\/scene\/recommend url reject-dict
-^https?:\/\/m5\.amap\.com\/ws\/asa\/ads_attribution url reject
+^https?:\/\/.*\.amap\.com\/(ws\/(shield\/scene\/recommend|asa\/ads_attribution)|uploadimg\/\w+\.gif) url reject-200
 ^https?:\/\/.*\.amap\.com\/ws\/(msgbox\/pull|valueadded\/alimama\/splash_screen|faas\/amap-navigation\/main-page|shield\/(dsp\/profile\/index\/nodefaas|search\/new_hotword)) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 
 
@@ -244,11 +242,9 @@ https://jdread-api.jd.com/jdread/api/popup url reject
 # > jingxi
 ^https?:\/\/api\.m\.jd\.com\/api\?functionId=delivery_show url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/startup.js
 # > jingdong
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start url reject
-^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=queryMaterialAdverts url reject
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(start|queryMaterialAdverts) url reject
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=hotWords url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/jd_json.js
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=hotSearchTerms url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/jd_json.js
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(hotWords|hotSearchTerms) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/jd_json.js
 # > jingdongjinrong
 ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/(new)?na\/m\/getLoadingPicture url reject
 # > jingdonglite
@@ -336,11 +332,9 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 # > MaiDuiDui
 ^https?:\/\/mob\.mddcloud\.com\.cn\/adApi\/advert url reject
 # > ManHuaRen
-^https?://tel.mangaapi.manhuaren.com/(v2/public/getStartUpMessage|v1/public/getStartPageAds) url reject
-http://tel.mangaapi.manhuaren.com/v2/ad/getMultiAdsStrategy url reject
-http://mangaapi.manhuaren.com/v2/public/getShelfActivity url reject
-^https?://mangaapi.manhuaren.com/(v2/public/getStartUpMessage|v1/public/getStartPageAds) url reject
-http://mangaapi.manhuaren.com/v2/ad/getMultiAdsStrategy url reject
+^https?:\/\/.*mangaapi\.manhuaren\.com\/(v2\/public\/getStartUpMessage|v1\/public\/getStartPageAds) url reject
+^https?:\/\/.*mangaapi\.manhuaren\.com\/v2\/ad\/getMultiAdsStrategy url reject
+^https?:\/\/.*mangaapi\.manhuaren\.com\/v2\/public\/getShelfActivity url reject
 # > MIX
 ^https:\/\/dispatcher\.camera360\.com\/api\/v1\/list$ url reject
 # > MaKaLong
@@ -382,8 +376,7 @@ https://access.mypikpak.com/access_controller/v1/area_accessible url reject
 ^https?:\/\/pss\.txffp\.com\/piaogen\/images\/launchScreen/ url reject
 # > pingancar
 ^https?:\/\/hcz-member\.pingan\.com\.cn\/micro-api\/homepage\/do\/app\/popbox\/getTopPopBox url reject
-^https?:\/\/iobs\.pingan\.com\.cn\/download\/bweb-per-sf-prd\/bweb url reject
-^https?:\/\/iobs\.pingan\.com\.cn\/download\/icore-aops-base-dmz-prd\/YourSystemName url reject
+^https?:\/\/iobs\.pingan\.com\.cn\/download\/(bweb-per-sf-prd\/bweb|icore-aops-base-dmz-prd\/YourSystemName) url reject
 # > pengpainews
 ^https?:\/\/adpai\.thepaper\.cn\/.+&ad= url reject
 # > pufayinhang
@@ -407,8 +400,7 @@ https://homefront.qunar.com/front/splash/ad url reject
 # ======= R ======= #
 
 # > RenMinRiBao
-^https:\/\/app\.peopleapp\.com\/Api\/\d+/HomeApi\/getAdvertImage url reject
-^https:\/\/app\.peopleapp\.com\/Api\/\d+/HomeApi\/adv url reject
+^https:\/\/app\.peopleapp\.com\/Api\/\d+/HomeApi\/(adv|getAdvertImage) url reject
 ^https?:\/\/stat\.peopleapp\.com\/ url reject
 
 
@@ -421,16 +413,7 @@ https://ios.sspai.com/api/v3/recommend/page/get\?ad.*ios_home_modal url reject
 # > spotify pro
 ^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
 # > spotify
-^https?://spclient.wg.spotify.com/ad-logic/* url reject-img
-^https?://spclient.wg.spotify.com/ads/* url reject-img
-^https?://spclient.wg.spotify.com/.+ad_slot url reject-img
-^https?://spclient.wg.spotify.com/.+banners url reject-img
-^https?://spclient.wg.spotify.com/.+canvases url reject-img
-^https?://spclient.wg.spotify.com/.+cards url reject-img
-^https?://spclient.wg.spotify.com/.+crashlytics url reject-img
-^https?://spclient.wg.spotify.com/.+doubleclick.net url reject-img
-^https?://spclient.wg.spotify.com/.+enabled-tracks url reject-img
-^https?://spclient.wg.spotify.com/.+promoted_offer url reject-img
+^https?://spclient.wg.spotify.com/(ad-logic|ads|.+ad_slot|.+banners|.+canvases|.+cards|.+crashlytics|.+doubleclick.net|.+enabled-tracks|.+promoted_offer) url reject-img
 ^https?:\/\/api\d?\.musical\.ly\/api\/ad\/ url reject-img
 # > SanLianZhongDu
 https://apis.lifeweek.com.cn/api/baseConfig/getIosNewConfig url reject
@@ -478,11 +461,7 @@ https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reje
 https://top-widgets-api.xiaozujian.com/api/ad/config url reject
 # > TencentNews
 ^https?:\/\/r\.inews\.qq\.com\/(adsBlacklist|getFullScreenPic|getQQNewsRemoteConfig) url reject
-^https?:\/\/r\.inews\.qq\.com\/getBannerAds url reject
-^https?:\/\/r\.inews\.qq\.com\/getNewsRemoteConfig url reject
-^https?:\/\/r\.inews\.qq\.com\/getSplash url reject
-^https?:\/\/r\.inews\.qq\.com\/searchHotCatList url reject
-^https?:\/\/r\.inews\.qq\.com\/upLoadLoc url reject
+^https?:\/\/r\.inews\.qq\.com\/(getBannerAds|getNewsRemoteConfig|getSplash|searchHotCatList|upLoadLoc) url reject
 # > taipinyang
 ^https?:\/\/mrobot\.pconline\.com\.cn\/s-900\/onlineinfo\/cms\/launch url reject
 # > tonghuashun
