--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-03
+// @UpdateTime        2023-01-05
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.43
+// @Version           V2.0.44
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -58,11 +58,18 @@
 # [+]2022-12-29  40、删除微博信息流中商品橱窗内容（并未将整个CARD一起删除）
 # [+]2023-01-01  41、删除微博首页顶部感兴趣的人group推荐，并兼容微博国际版
 # [+]2023-01-03  42、去除微博国际版热搜列表的置顶内容
+# [+]2023-01-05  43、添加屏蔽sdkconfig请求及应用内弹窗广告请求
+
+
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 # > 微博_请手动添加以下分流至本地
 #host, sdkapp.uve.weibo.com, direct
+# > 微博_应用内弹窗广告
+^https?:\/\/(preload-click|preload-impression)\.uve\.weibo\.com\/(interface\/wbpullad\/wbpullad_click\.php|wbapplua\/get_wbpullad_log\.lua) url reject
+# > 微博_屏蔽sdkconfig请求
+^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkconfig\.php url reject
 # > 微博_Spotlight@ddgksf2013
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/hot\/hours_spotlight url reject-dict
 # > 微博_自定义tab皮肤@zmqcherish
