--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-18
+// @UpdateTime        2023-02-22
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.64
+// @Version           V2.0.65
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -71,9 +71,10 @@
 # [+]2023-02-09  52、自动删除我的页面除[超话社区]CARD以外的所有推广内容（再也不用手动移除），另外[超话社区]依然支持自主移除或添加到我的页面内
 # [+]2023-02-09  53、我的页面Card白名单新增[我的最近访问]，以方便群友，依然支持自主移除或添加
 # [+]2023-02-13  54、修复某些用户微博页面最近动态不显示的bug，增加微博视频detail处理
-# [+]2023-02-15  55、在有缓存的情况下，移除微博搜索框下的‘猜你想搜’栏目以及‘猜你想搜偏好设置’栏目[code not added]
+# [+]2023-02-15  55、在有缓存的情况下，处理微博搜索框下的‘猜你想搜’栏目以及‘猜你想搜偏好设置’栏目[code not added]
 # [+]2023-02-16  56、处理部分用户每日首次打开微博的开屏广告请求[部分用户是指未将boot.biz.weibo.com域名添加黑名单]
 # [+]2023-02-18  57、修复微博在繁体字下评论区屏蔽用户推荐失效的问题
+# [+]2023-02-22  58、处理信息流中视频左上角的"红包派送中"Tag[code not added]
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
