--- a/AdBlock/Cainiao.conf
+++ b/AdBlock/Cainiao.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-24
+// @UpdateTime        2023-02-25
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载菜鸟APP，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.5
+// @Version           V1.0.6
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Cainiao.conf
 // ==/UserScript==
 
@@ -36,5 +36,5 @@ hostname=cn-acs.m.cainiao.com, guide-acs.m.taobao.com
 ^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.adx\.flyad\.getad url reject-200
 # > 菜鸟裹裹_支付宝小程序_匿名选择@ddgksf2013
 ^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.nbmensa\.research\.researchservice\.consultmerge url reject-200
-# > 菜鸟裹裹_支付宝小程序_中部的寄件推广@ddgksf2013
+# > 菜鸟裹裹_支付宝小程序_中部的寄件推广[导致的空白占位后续处理]@ddgksf2013
 ^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.mshow url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
