--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -76,7 +76,7 @@
 # [+]2023-02-18  57、修复微博在繁体字下评论区屏蔽用户推荐失效的问题
 # [+]2023-02-22  58、处理信息流中视频左上角的"红包派送中"Tag[code not added]
 # [+]2023-02-25  59、处理用户反馈的微博国际版‘微博会员’推广CARD
-# [+]2023-02-25  60、修改MITM写法，使域名适用小火箭的MITM
+# [+]2023-02-25  60、修改MITM写法，使小火箭工具能够MITM本重写的域名[后续新的重写配置也将注意此问题]
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
