--- a/AdBlock/YoutubeAds.conf
+++ b/AdBlock/YoutubeAds.conf
@@ -1,6 +1,6 @@
 ########################################
 #应用名称：  Youtube Block AD
-#脚本作者：  @DivineEngine, @app2smile, @Maasea
+#脚本作者：  @DivineEngine, @app2smile, @Maasea, @VirgilClyne
 #更新时间：  2023-01-27
 #使用说明：  用于视频、瀑布流、搜索、播放页、短视频及贴片广告、视频自动PIP、后台播放，不适用允许 UDP 转发的节点及 Premium
 #使用说明：  如果视频广告仍然存在，请在QuantumultX配置文件的[general]下添加 udp_drop_list=443
