--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-25
+// @UpdateTime        2023-03-04
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.67
+// @Version           V2.0.68
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -87,7 +87,7 @@ hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.we
 
 
 # > 微博_每日一次的开屏广告请求@ddgksf2013
-^https?:\/\/boot\.biz\.weibo\.com\/v1\/ad\/realtime url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
+^https?:\/\/boot\.biz\.weibo\.com\/v1\/ad\/realtime url reject-200
 # > 微博_视频信息处理@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/video\/tiny_stream_mid_detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_去除底部超话栏表层浮icon及tips@ddgksf2013
