--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -77,7 +77,7 @@
 # [+]2023-02-22  58、处理信息流中视频左上角的"红包派送中"Tag[code not added]
 # [+]2023-02-25  59、处理用户反馈的微博国际版‘微博会员’推广CARD
 # [+]2023-02-25  60、修改MITM写法，使小火箭工具能够MITM本重写的域名[后续新的重写配置也将注意此问题]
-
+# [+]2023-03-04  61、调整boot.biz.weibo.com屏蔽策略，缩短微博应用启动时间[也可在本地添加host,boot.biz.weibo.com,reject]
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
 
