--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -6,10 +6,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-10
+// @UpdateTime        2023-03-05
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.19
+// @Version           V1.0.20
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -18,6 +18,7 @@
 // 1、进入【设置】，然后点击【底部导航自定义】，进入后可移除网易云APP下方的【播客】与【社区】tab
 // 2、首页滑到最底部，点击【自定义排序】，可移除【顶部横幅】card，顶部横幅里包含广告，作用也不大
 // 3、设置网易云音乐为青少年模式，会减少一些广告的请求，点击左上角，下滑即可看到【青少年模式】
+// 4、进入【设置】，然后点击【账号页管理】，进入后可关闭趣测、云村有票、商城、Beat专区等等Tab
 
 
 hostname = interface*.music.163.com 
@@ -54,5 +55,5 @@ hostname = interface*.music.163.com
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/resource-exposure\/activity\/config url reject-dict
 # > 网易云_VIP歌曲提醒框
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/vipcenter/tspopup\/get url reject-dict
-# > 网易云_搜索页下方热搜CARD[自行启用]
+# > 网易云_搜索页下方热搜Card[自行启用]
 ; ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/chart url reject-dict
