--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,8 +9,8 @@
 // @UpdateTime        2023-03-05
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.20
-// @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
+// @Version           V1.0.21
+// @RewriteURL        https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
 
