--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -11,6 +11,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：205）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
+// @APPList           无法通过𝐌𝐈𝐓𝐌去广告的应用：银行类[Most]|抖音|蜂巢|小米运动|万年历|豆瓣[信息流]|虎牙直播|货拉拉|番茄小说|什么值得买
 // @Attention         如果广告仍然存在，请『卸载应用』重新安装，还是不行则表示『规则里没有或已失效』
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -19,7 +20,7 @@
 
 # ======= ~ ====== #
 
-#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、高德地图、小红书、网易云】去广告
+#以下重写请自行添加，本重写引用不含[喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、高德地图、小红书、网易云]去广告
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
@@ -34,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.03.06\/v2.0.272 url reject
+^https?:\/\/2023.03.06\/v2.0.273 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
