--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.73
+// @Version           V2.0.74
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -88,7 +88,7 @@ hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.we
 
 
 
-# > 微博_未登陆状态下首页[关注]与[热门]信息流处理@ddgksf2013
+# > 微博_未登陆状态下首页信息流处理@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/\w{5}\/(statuses_unread_hot_timeline|timeline) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_每日一次的开屏广告请求@ddgksf2013
 ^https?:\/\/boot\.biz\.weibo\.com\/v1\/ad\/realtime url reject-200
