--- a/Html/Q-Search.conf
+++ b/Html/Q-Search.conf
@@ -3,13 +3,13 @@
 # - 【命令+空格+关键词】或者【关键词+空格+命令】
 # - 注：请先进入设置更改 Safari 默认搜索为 DuckDuckGO
 # - 更新时间：2023-03-11
-# - 墨鱼自用全能搜索V2.0(132)
+# - 墨鱼自用全能搜索V2.0(133)
 # - 公众号墨鱼手记
 # - 如需引用请注明出处-> https://t.me/ddgksf2021 谢谢合作！
 # - https://github.com/ddgksf2013/Rewrite/raw/master/Html/Q-Search.conf
 ##############################################
 
-hostname = duckduckgo.com, www.bing.com
+hostname = duckduckgo.com
 
 
 
@@ -157,7 +157,6 @@ hostname = duckduckgo.com, www.bing.com
 # by  xxx (必应)
 ^https:\/\/duckduckgo.com\/\?q=by\+([^&]+).+ url 302 https://www.bing.com/search?q=$1
 ^https:\/\/duckduckgo.com\/\?q=([^+]+)\+by.+ url 302 https://www.bing.com/search?q=$1
-^https:\/\/www\.bing\.com\/(search|new) url request-header (\r\nUser-Agent:.+?)\w+\/[\d\.]+(\r\n) request-header $1AppleWebKit/537.36 Chrome/110.0 Safari/537.36 Edg/110.0$2
 # ios  xxx (苹果应用搜索)
 ^https:\/\/duckduckgo.com\/\?q=ios\+([^&]+).+ url 302 https://www.qimai.cn/search/index/search/$1
 ^https:\/\/duckduckgo.com\/\?q=([^+]+)\+ios.+ url 302 https://www.qimai.cn/search/index/search/$1
