--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.03.12\/v2.0.278 url reject
+^https?:\/\/2023.03.12\/v2.0.279 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -312,7 +312,7 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 # > lanRenTingShu
 ^https?:\/\/.*\/yyting\/advertclient\/ClientAdvertList.action url reject
 # > lanjiyin
-^https?:\/\/tk\.lanjiyin\.com\.cn\/ad\/getAdList
+^https?:\/\/tk\.lanjiyin\.com\.cn\/ad\/getAdList url reject
 
 
 # ======= M ======= #
