--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.03.12\/v2.0.280 url reject
+^https?:\/\/2023.03.12\/v2.0.281 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -547,7 +547,7 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject
 # > xiaomi
 ^https?:\/\/api\.m\.mi\.com\/v1\/app\/start url reject
 # > xiaomiyoupin
-^https:\/\/shopapi\.io\.mi\.com\/mtop\/mf\/resource\/homePage\/pageConfig url reject
+^https?:\/\/shopapi\.io\.mi\.com\/mtop\/mf\/resource\/homePage\/pageConfig url reject
 # > xifandongman
 ^https?:\/\/pzoap\.moedot\.net\/xgapp\.php\/v2\/top_notice url reject
 # > xiangrikui
