--- a/Function/BilibiliAutoRegion.conf
+++ b/Function/BilibiliAutoRegion.conf
@@ -1,16 +1,13 @@
-############################################################################
-# 使用说明请参考
-# https://github.com/NobyDa/Script/raw/master/Surge/JS/Bili_Auto_Regions.js
-# 改进 by ddgksf2013 ：当B站直连时，修复点击台湾番剧（例如关注列表中出差君发布的番剧）无法切换策略的BUG，
-#20220108作者已修复该bug，换回作者链接
-#国区粉色APP已无法通过搜索来切换港澳台区域
-############################################################################
+####################################
+# 使用说明请参考下面链接@NobyDa 
+# https://bit.ly/3ZQuw1g
+# 2022-01-08 改进 by ddgksf2013 ：当B站直连时，修复点击台湾番剧（例如关注列表中出差君发布的番剧）无法切换策略的BUG，
+# 2022-01-08 作者已修复该bug，换回作者链接
+# 2022-10-16 国区粉色APP已无法通过搜索来切换港澳台区域
+# 2023-04-08 去除视频播放页内推广
+###################################
 
 
 hostname = ap?.bilibili.com, ap?.biliapi.net
 
-# > Policy自动切换
-^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/offline\/version)\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
-
-#可选, 适用于搜索指定地区的番剧
-^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
+^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/offline\/version)\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
