--- a/UnlockVip/Spotify.conf
+++ b/UnlockVip/Spotify.conf
@@ -1,10 +1,8 @@
 ########################################
 #应用名称：  Spotify
 #脚本作者：  app2smile
-#更新时间：  2022-02-15
-#使用说明：  1、部分解锁premium 需iOS15 ,音质不能设置为超高；
-#使用说明：  2、搜索界面 歌单/歌曲可以随意切换完全播放；
-#使用说明：  3、音乐库已点赞歌曲随意切换完全播放；
+#更新时间：  2022-06-13
+#使用说明：  解锁部分premium,建议重新登录,并清除缓存,音质不能设置为超高。功能：1.去除播放广告；2.歌手/专辑列表正常展示；3.去除随机播放
 #通知频道：  https://t.me/ddgksf2021
 #作者库地：  https://github.com/app2smile/rules
 #脚本地址：  https://github.com/ddgksf2013/Rewrite/raw/master/UnlockVip/Spotify.conf
@@ -12,4 +10,6 @@
 
 
 hostname=spclient.wg.spotify.com
-^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
+
+^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-request-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-json.js
+^https:\/\/spclient\.wg\.spotify\.com\/(artistview\/v1\/artist|album-entity-view\/v2\/album)\/ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
