--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -9,7 +9,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-05-27
+// @UpdateTime        2023-06-28
 // @ConfigVersion     V2.0.123
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
@@ -81,6 +81,7 @@
 //2023-04-27 58、修复视屏播放页UP主显示未关注问题[即已关注点开视屏却显示未关注]
 //2023-05-27 59、新增去除交互点赞投票弹幕、青少年弹窗@Maasea，由于QX目前还不支持MITM H2，故新版使用可能存在问题[具体可参考https://t.me/ddgksf2021/3749]，这里推荐使用V7.22.0
 //2023-05-27 60、新增去除BiliBili搜索页广告，重写按照功能分组，方便用户自行复制添加部分功能
+//2023-06-28 61、新增去除B站每日青少年弹窗@BiliUniverse
 
 
 hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net
