--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,7 +5,7 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023-06-27
+// @UpdateTime        2023-06-28
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
@@ -36,7 +36,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.06.26\/v2.0.323 url reject
+^https?:\/\/2023.06.28\/v2.0.324 url reject
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -139,7 +139,7 @@ https://beta-api.crunchyroll.com/cms url response-body offset_ms":\d+ response-b
 ^https?:\/\/api\.douban\.com\/v2\/app_ads\/splash url reject
 ^https?:\/\/api\.douban\.com\/b.*\/common_ads\?.* url reject
 # > dingdongmaicai
-^https?:\/\/maicai\.api\.ddxq\.mobi\/advert\/ url reject
+https://maicai.api.ddxq.mobi/advert url response-body data" response-body ddgksf2013"
 # > didichuxing
 https?://res\.xiaojukeji\.com\/resapi\/activity\/mget url reject
 https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNotices) url reject
